# catkin_ws

./: CartPole_Base_lineRewards.csv  CartPole_Rewards10Thresh.csv  CartPole_Rewards1Thresh.csv  CartPole_Rewards20Thresh.csv  CartPole_Rewards3Thresh.csv  CartPole_Rewards50Thresh.csv  CartPole_Rewards5Thresh.csv  segment.py  segment_temp.py
ARS CW/: Cart_PoleDRL.py  Cart_Pole_RL.py  MtCarHeu.py  MtCarRL VariDecay.py  MtCarRL.py
DRL-robot-navigation/TD3/: small_rl_campus.world  train_velodyne_td3.py  velodyne_env.py
DRL-robot-navigation/TD3/assets/: multi_robot_scenario.launch
DRL-robot-navigation/TD3/pytorch_models/: TD3_velodyne_actor.pth  TD3_velodyne_critic.pth
DRL-robot-navigation/TD3/results/: TD3_velodyne.npy
DRL-robot-navigation/catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
install/: setup.sh
runs/Nov02_21-15-39_kai-A520M-DS3H-AC/: events.out.tfevents.1667394939.kai-A520M-DS3H-AC.10416.0
runs/Nov02_21-15-53_kai-A520M-DS3H-AC/: events.out.tfevents.1667394953.kai-A520M-DS3H-AC.10501.0
src/: Cart Pole RL.ipynb  Cart_Pole_1Heu.py  Cart_Pole_RL  Cart_Pole_RL.py  MtCarRL.py
src/Campus/: model.sdf
src/TARS5_URDF/: CMakeLists.txt
src/TARS_5Full/: CMakeLists.txt  package.xml
src/TARS_5Full/config/: joint_names_TARS_5Full.yaml
src/TARS_5Full/launch/: display.launch  gazebo.launch
src/TARS_5Full/meshes/: Lidar_Link.STL
src/TARS_5Full/urdf/: TARS_5Full.csv  TARS_5Full.urdf
src/tars4_1_urdf/: CMakeLists.txt  tars4_world.world  train_tars4.py
src/tars5_5/: CMakeLists.txt
src/tars5_6/: .gitignore  CMakeLists.txt  README.md  package.xml
(+246 files in other folders)
